# glaive

./: .gitignore  ACCURACY_REPORT.md  ARCHITECTURE.md  BYPASS_TESTS.md  LIMITATIONS.md  README.md  install.sh  pyproject.toml
docs/: AGENT_PROTOCOL.md  CASE_CANDIDATES.md  DECISIONS.md  EVIDENCE.md  EVIDENCE_GRAPH_SCHEMA.md  MCP_TOOLS.md
docs/skills/graph-verification/: SKILL.md
evidence_samples/: MANIFEST.yaml  README.md
glaive/: __init__.py  cli.py
glaive/evidence/: store.py
glaive/graph/: base.py  edges.py  nodes.py  wrapper.py
glaive/ingestion/: base.py  defender.py  evtx_adapter.py  orchestrator.py  volatility.py
glaive/mcp_server/: server.py  session.py  tools.py
glaive/reporting/: report.py
tests/: conftest.py  test_smoke.py
tests/evidence/: test_store.py
tests/graph/: test_base.py  test_edges.py  test_nodes.py  test_wrapper.py
tests/ingestion/: test_base.py  test_defender.py  test_e2e_real_evidence.py  test_evtx_adapter.py  test_orchestrator.py  test_volatility.py
tests/mcp_server/: test_agent_loop.py  test_commit_finding.py  test_get_node_provenance.py  test_ingest_artifact.py  test_list_evidence.py  test_query_graph.py
tests/reporting/: test_report.py
verification/: harness.py
verification/bypass_tests/: test_a1_hallucinated_key.py  test_a2_confidence_inflation.py  test_a3_prompt_injection.py  test_a4_path_traversal.py  test_a5_resource_exhaustion.py
